# CAN-TA2T

./: LICENSE  README.md  initial commit.txt  setuptheHirearchy.py
Simulators/: CanSim.py  DBCparser.py  DataBaseConnector.py  Sim.readme.txt  Tables.sql  dockercompose.yml  instruct.bash  makefile  req.txt  setup.sh
backend/: All.js  package-lock.json  package.json  server.js
backend/config/: can_database.dbc  database_config.json  mqtt_config.json
backend/include/: can_decoder.h  database_manager.h  mqtt_subscriber.h  websocket_server.h
backend/src/: can_decoder.cpp  database_manager.cpp  mqtt_subscriber.cpp  server.js  websocket_server.cpp
backend/tests/: test_can_decoder.cpp  test_mqtt.cpp
backend/websocket/: wsServer.js
database/: schema.sql  seed_data.sql
database/migrations/: 001_initial_schema.sql  002_add_indexes.sql
docker/: Dockerfile.backend  Dockerfile.mosquitto  docker-compose.yml
docs/: api_reference.md  architecture.md  can_protocol.md  setup_guide.md
frontend/web-classic/: index.html  package-lock.json  package.json
mobile/android/: CMakeLists.txt  build.gradle
mobile/android/app/src/main/cpp/: bluetooth_client.cpp  jni_bridge.cpp  mqtt_publisher.cpp  native-lib.cpp
mobile/android/app/src/main/java/com/vehiclemonitor/: BluetoothService.java  MainActivity.java  MqttService.java
scripts/: build_all.sh  deploy.sh  setup_env.sh
sim/: CanSim.py  can_messages.csv  can_messages.json  import_db_format_compatible.py  requirements.txt
sql/: 01_init_schema.sql
tools/: can_simulator.cpp  dbc_parser.cpp  mqtt_logger.cpp
(+49 files in other folders)
